Fix spacing of header bar

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ div {
   .header-list {
     flex-grow: 1;
     display: inline;
+    margin-right: 10px;
   }
 
   .header-list-items {
